<resources>
    <string name="app_name">FizoAlarm</string>
    <string name="fragment_select_ringtone_label">Ringtone</string>
    <string name="action_settings">Settings</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="repeat_days">Repeat Days</string>
    <string name="next">Next</string>
    <string name="add_new_file">Add New File</string>
    <string name="select_file_by">Select File By</string>
    <string name="datePicker_title">Select Date For Alarm</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="every">Every</string>
    <string name="delete">Delete</string>
    <string name="become_date_specific_alarm_no_repeat">Repeating turned off</string>
    <string name="become_repeat_specific_alarm_no_date">Alarm canceled for selected date</string>
    <string name="off">off</string>
    <string name="never">Never</string>
    <string name="_3_minutes">3 minutes</string>
    <string name="_5_minutes">5 minutes</string>
    <string name="_8_minutes">8 minutes</string>
    <string name="_10_minutes">10 minutes</string>
    <string name="_15_minutes">15 minutes</string>
    <string name="_20_minutes">20 minutes</string>
    <string name="snooze_time_on_btn">%1$d min</string>
    <string name="alarm_details">Alarm Details</string>
    <string name="delete_confirmation_title">Are you Sure You Want To Delete %1$d Alarms ?</string>
    <string name="action_mode_x_items_selected">%1$d Alarms Selected</string>
    <string name="ringing_service_channel_name">Ringing Notification</string>
    <string name="snooze_channel_name">Snooze Notification</string>
    <string name="alarm_default_label_in_notification">Ringing …</string>
    <string name="toast_alarm_schedule_duration_less_than_a_minute">Ring in less than a minute</string>
    <string name="toast_alarm_schedule_duration_with_minutes">Ring in %1$d min</string>
    <string name="toast_alarm_schedule_duration_with_hours">Ring in %1$d hr, %2$d min</string>
    <string name="toast_alarm_schedule_duration_with_days">Ring in %1$d Days, %2$d hr, %3$d min</string>
    <string name="dismiss">Dismiss</string>
    <string name="snooze">Snooze</string>
    <string name="alarm_snoozed">Alarm Snoozed</string>
    <string name="maximum_number_of_alarms_reached">Maximum number of alarms (50) reached.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="dismiss_alarm_before_open_settings">Dismiss running alarm before you can open settings</string>
    <string name="voice_recording_max_time_reached">Recording finished, only %1$d seconds allowed.</string>
    <string name="past_time">Past time</string>
    <string name="can_not_set_alarm_for_past">Can not set alarm for the past</string>
    <string name="problem_play_ringtone">Problem with playing this ringtone</string>
    <string name="date">Date</string>
    <string name="todays_ad">Today\'s Ad</string>
    <string name="night_clock">Night Clock</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="classic">Classic</string>
    <string name="fizo">Fizo</string>
    <string name="my_files">My Files</string>
    <string name="permission_not_granted_title">Permission Not Granted</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="permission_phone_state_needed">Phone Permission</string>
    <string name="permission_phone_state_needed_description">App need \'Phone permission\' in case of alarm start ringing while the phone in call state.</string>
    <string name="missed_alarm_no_read_phone_state_permission">Missed Alarm due to missing manage phone calls permission.
    </string>
    <string name="permission_alert_window_needed"> Screen Overlay Permission</string>
    <string name="permission_alert_window_needed_description">App need \'Screen Overlay Permission\' to show ringing screen automatically when the alarm start ringing.
    </string>
    <string name="permission_audio_record_needed">Audio record permission NOT granted</string>
    <string name="open_settings">Open Settings</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="wrong">Wrong</string>
    <string name="optional">optional</string>
    <string name="silent">Silent</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="auto_dismiss">Auto dismiss</string>
    <string name="record_sound_btn_onClick_toast">Hold to record, release to stop recording</string>
    <string name="device_admin_enabled">App added to device admins</string>
    <string name="morning_challenge">Morning Challenge</string>
    <string name="challenge_none">None</string>
    <string name="challenge_math">Math</string>
    <string name="difficulty">Difficulty</string>
    <string name="Number_of_problems">Number Of Problems</string>
    <string name="difficulty_example_easy">Example : 3 * 8 = ??!</string>
    <string name="difficulty_example_normal">Example : ( 3 * 8 ) + 9 = ??!</string>
    <string name="difficulty_example_hard">Example : ( 3 * 8 ) + ( 7 * 4 ) = ??! </string>
    <string name="math_challenge_details_text">Difficulty : %1$s , Problems : %2$d</string>
    <string name="open_challenge">Open Challenge</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="challenge_shake">Shake</string>
    <string name="shake_challenge_details_text">Shakes : %1$d </string>
    <string name="done_shakes">%1$d Shakes Remaining</string>
    <string name="number_of_shakes">Number Of Shakes</string>
    <string name="challenge_barcode">Barcode</string>
    <string name="barcode_challenge_details_text">Barcode for : %1$s </string>
    <string name="add_new_code">Add new code</string>
    <string name="barcode_label">Product Name</string>
    <string name="add_label_to_code_helper_text">Barcode : %1$s</string>
    <string name="flash_light">Flash light</string>
    <string name="switch_camera">Switch camera</string>
    <string name="barcode_toolbar_default_label">Scan Barcode</string>
    <string name="barcode_switch_camera_to_use_flash">Switch camera to use flash light</string>
    <string name="barcode_max_items_count_reached">Only %1$d items allowed, Delete an old item before you add new one</string>
    <string name="challenge_smile">Smile</string>
    <string name="smile_challenge_details_text">Open your eyes and smile to camera to dismiss alarm</string>
    <string name="general_header">General</string>
    <string name="alarm_settings_header">Alarm Settings</string>
    <string name="first_day_of_week">First Day Of Week</string>
    <string name="always_use_built_in_speaker_title">Always ring through device speaker</string>
    <string name="always_use_built_in_speaker_summary_on">Alarm will always ring through device speaker</string>
    <string name="always_use_built_in_speaker_summary_off">Alarm may ring through connected device</string>
    <string name="device_admin_switch_title">Prevent stop app while ringing</string>
    <string name="device_admin_switch_summary_off">You may stop the app while you are sleepy unintentionally</string>
    <string name="increase_sound_to_max_switch_title">Override sound setting to max volume</string>
    <string name="increase_sound_to_max_switch_summary_on">Alarm sound will increase to max volume while alarm even if system sound is lower</string>
    <string name="increase_sound_to_max_switch_summary_off">Alarm sound will be as sound setting in your device</string>
    <string name="allowed_snooze_times">Allowed snooze times</string>
    <string name="allowed_snooze_1">1 time</string>
    <string name="allowed_snooze_2">2 times</string>
    <string name="allowed_snooze_3">3 times</string>
    <string name="allowed_snooze_4">4 times</string>
    <string name="allowed_snooze_5">5 times</string>
    <string name="flash_light_timeout">Flash light timeout</string>
    <string name="_30_sec">30 seconds</string>
    <string name="_45_sec">45 seconds</string>
    <string name="_60_sec">60 seconds</string>
    <string name="auto_dismiss_or_snooze_title">Manage Alarm timeout</string>
    <string name="auto_dismiss_or_snooze_summary_on">Alarm will stop after certain time of ringing.</string>
    <string name="auto_dismiss_or_snooze_summary_off">Alarm will still ringing until user dismiss it.</string>
    <string name="alarm_timeout">Alarm timeout</string>
    <string name="after_alarm_timeout">After alarm timeout</string>
    <string name="sound_and_notifications">Sound and Notifications</string>
    <string name="title_activity_smile_ringing">Smile Ringing</string>
    <string name="camera_permission_not_granted">Camera permission not granted, enable it from app settings</string>
    <string name="camera_permission_for_flash_not_granted">Camera permission is needed, so you can use flash light in alarm</string>
    <string name="onboarding_title_1">Welcome</string>
    <string name="onboarding_description_1">Annoying you at morning is our mission.</string>
    <string name="ready">Ready</string>
    <string name="onboarding_lets_go">Let\'s Go</string>
    <string name="onboarding_got_it">GOT IT</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="new_version_available">New Version</string>
    <string name="new_version_message">Please, update the app to the new version to continue use it.</string>
    <string name="update">Update</string>
    <string name="no_thanks">No, Thanks</string>
    <string name="about">About</string>
    <string name="rate_app">Rate this App</string>
    <string name="developed_by">Developed by</string>
    <string name="version">Version</string>
    <string name="mansour" translatable="false">Mansour</string>
    <string name="device_admin_dialog_title">Device Admins</string>
    <string name="device_admin_dialog_message">Add app to device administrators make it harder to stop alarm at morning</string>
    <string name="device_admin_from_night_clock">Add app to device admins to lock device when show night clock</string>
    <string name="reward_dialog_optionally_opened_message">video ad may show you a good thing for your day</string>
    <string name="reward_dialog_title">Video AD</string>
    <string name="reward_dialog_message">Watch short video once every many days, so you can add new alarms.</string>
    <string name="reward_dialog_positive_btn">Watch now</string>
    <string name="reward_dialog_negative_btn">No, Thanks</string>
    <string name="reward_dialog_neutral_btn">Purchase</string>
    <string name="device_admin_disabled">App removed from device admins</string>
    <string name="device_admin_switch_summary_on">App added to device admins</string>
</resources>