<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".main.SelectRingtoneFragment">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/speaker_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_volume_up_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/volume_slider"/>

    <com.google.android.material.slider.Slider
        android:id="@+id/volume_slider"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:value="1.0"
        android:valueFrom="0.0"
        android:valueTo="1.0"
        app:layout_constraintEnd_toStartOf="@id/record_sound_btn"
        app:layout_constraintStart_toEndOf="@id/speaker_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:labelBehavior="gone"
        android:layout_marginEnd="8dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/record_sound_btn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        app:cornerRadius="48dp"
        app:icon="@drawable/ic_baseline_mic_24"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/recorded_sound_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/volume_slider"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/recorded_sound_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            style="@style/ringtones_radio_group_item"/>

    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/button_group_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="volume_slider,recorded_sound_card_view" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/ringtones_type_button_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button_group_barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:singleSelection="true"
        app:selectionRequired="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/classic_btn_in_group"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/classic" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/app_btn_in_group"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fizo" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/file_btn_in_group"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/my_files" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/ringtones_type_button_group"
        app:layout_constraintBottom_toBottomOf="parent">

        <RadioGroup
            android:id="@+id/ringtones_radio_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>